--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -49,8 +49,7 @@
 
 
     @include breakpoint( $until: tablet ) {
-      border-top:    0;
-      border-bottom: 0;
+      border-top: 0;
 
       figcaption {
         > div {
@@ -86,7 +85,7 @@
     }
 
     @include breakpoint( desktop ) {
-      border-bottom: 5px solid $green-brand;
+      border-bottom: $border-width-thick solid $green-brand;
 
       figure {
         display: block;
